--- a/web/src/styles/tokens.css
+++ b/web/src/styles/tokens.css
@@ -28,7 +28,7 @@
   /* Text */
   --colour-text-primary:            #1d1d1f;
   --colour-text-secondary:          rgb(0 0 0 / 80%);
-  --colour-text-tertiary:           rgb(0 0 0 / 48%);
+  --colour-text-tertiary:           rgb(0 0 0 / 60%);
   --colour-text-on-dark:            #fff;
 
   /* Interactive / accent */
